--- a/psi.css
+++ b/psi.css
@@ -61,13 +61,13 @@
               font-weight: bold;
               cursor: pointer;
           }
-p.obratipozornost   {
+.obratipozornost   {
             width: 600px;
             text-indent: -8px;
             padding: 6px 10px 6px 8px;
             background-color: var(--GrayExtraLight);
 }
-p.obratipozornost::before   {
+.obratipozornost::before   {
             content: 'VAŽNO!';
             font-family: var(--FontSansSerif);
             font-weight: bold;
