--- a/psi.css
+++ b/psi.css
@@ -65,19 +65,19 @@
             width: 600px;
             text-indent: -8px;
             padding: 6px 10px 6px 8px;
-            background-color: GrayExtraLight;
+            background-color: #D8D8D8;
 }
 .obratipozornost::before   {
             content: 'VAŽNO!';
-            font-family: vFontSansSerif;
+            font-family: SansSerif;
             font-weight: bold;
             font-style: italic;
             font-size: 12pt;
             line-height: 12pt;
             text-transform: uppercase;
             letter-spacing: 2px;
-            color: YellowLight;
-            background-color: PurpleDark;
+            color: #FF0033;
+            background-color: white;
             padding: 8px 6px 1px 6px;
             margin-right: 6px;
 }
